--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
+    "ejs": "^3.1.5",
     "express": "^4.16.4",
+    "html": "^1.0.0",
     "node-fetch": "^2.3.0",
     "pg": "^7.8.1",
     "sequelize": "^4.43.0"
